fix coin pickup not working for some coins due to invisible canvas

--- a/frontend/static/css/other.css
+++ b/frontend/static/css/other.css
@@ -24,6 +24,7 @@
   width: 100vw;
   height: 0;
   margin: 0 auto;
+  visibility: hidden;
 
   &>#chart {
     width: 80vw;
@@ -32,6 +33,7 @@
 
   &.chart-displayed {
     height: 40vh;
+    visibility: visible;
 
     &>#save-chart {
       height: auto;
